@@ -1,19 +1,23 @@
-package net.intcoder.tbravocalc.bc;
+package net.intcoder.bc;
 
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.StringUtils;
 
 import javax.tools.*;
+import java.io.BufferedWriter;
+import java.io.ByteArrayOutputStream;
+import java.io.OutputStreamWriter;
 import java.nio.file.Files;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 public class CodeCompiler {
-    public static Class<?> compile(String fullClassName, String src) {
+    public static <T> Class<T> compile(String fullClassName, String src) {
         var compiled = compileToByteArray(fullClassName, src);
         var cl = new ByteArrayClassLoader(Map.of(fullClassName, compiled));
         try {
-            return cl.loadClass(fullClassName);
+            return (Class<T>) cl.loadClass(fullClassName);
         } catch (ClassNotFoundException e) {
             throw new RuntimeException("Compilation error", e);
         }
@@ -29,16 +33,19 @@ public class CodeCompiler {
 
             Files.writeString(srcCodeFile, src);
 
+            var output = new ByteArrayOutputStream();
+            var outputWriter = new OutputStreamWriter(output);
+
             JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
             DiagnosticCollector<JavaFileObject> diagnostics = new DiagnosticCollector<>();
             StandardJavaFileManager fileManager = compiler.getStandardFileManager(diagnostics, null, null);
             Iterable<? extends JavaFileObject> compilationUnits = fileManager.getJavaFileObjectsFromStrings(Arrays.asList(srcCodeFile.toString()));
-            JavaCompiler.CompilationTask task = compiler.getTask(null, fileManager, diagnostics, null, null, compilationUnits);
+            JavaCompiler.CompilationTask task = compiler.getTask(outputWriter, fileManager, diagnostics, List.of("--enable-preview", "--release", "15"), null, compilationUnits);
             boolean success = task.call();
             fileManager.close();
 
             if (!success) {
-                throw new Exception();
+                throw new Exception(output.toString());
             }
 
             var compiledFile = tmpDir.resolve(className + ".class");
